- changed the add new pin button on the home page to pin current location - implemented core location for the pin current location - added firebase database to the pod file (also created a new database on firebase) - changed Spot.category to string - deleted manual longitude/latitude entry for the add new pin button on homepage

--- a/Spots/Podfile
+++ b/Spots/Podfile
@@ -13,4 +13,6 @@ target 'Spots' do
   pod 'Firebase/Firestore'
   pod 'FirebaseFirestoreSwift'
   pod 'Firebase/Auth'
+  pod 'Firebase/Database'
+
 end
