Fix Git issues and update custom pin

--- a/Spots/Spots/Info.plist
+++ b/Spots/Spots/Info.plist
@@ -60,5 +60,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Please allow permissions to import photos to Spot</string>
 </dict>
 </plist>
