Added Firebase Storage, added Custom Pin functionality, Need to finalize custom pin sending to database

--- a/Spots/Podfile
+++ b/Spots/Podfile
@@ -13,4 +13,5 @@ target 'Spots' do
   pod 'Firebase/Firestore'
   pod 'FirebaseFirestoreSwift'
   pod 'Firebase/Auth'
+  pod 'Firebase/Storage'
 end
